# weather-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
tests/: test_client.py
weather/: client.py  urls.py  views.py
